trunk/Archive2/c6/3846679ac4b979/main.cpp
#include <iostream>
#include <vector>

int main() {
    std::vector<const int> vec;
}